syntax = "proto3";

package bingo.proto.actions;
option java_multiple_files = true;

message GetGridSizeRequest {
    uint32 player_id = 1;
}

message GetGridSizeResponse {
    uint32 size = 1;
}
